# zeabus_component

./: .gitignore
zeabus_control/: CMakeLists.txt  package.xml
zeabus_control/include/zeabus_control/: README.md  fuzzy_master_rule.hpp  fuzzy_x_parameter.hpp  interfaces_rule.hpp
zeabus_control/include/zeabus_control/fuzzy/: all_parameter.hpp  master_rule.hpp  pitch_parameter.hpp  roll_parameter.hpp  x_parameter.hpp  y_parameter.hpp  yaw_parameter.hpp  z_parameter.hpp
zeabus_control/scripts/: 4th_t200_16.txt  README.md  blue_robotics_2018.txt  constant.py  lookup_pwm_force.py  read_file.py  test_thruster_mapper.py  thruster_mapper_enu.py
zeabus_control/src/: ;  README.md  control_by_force.cpp  control_by_velocity.cpp  control_fuzzy.cpp  control_velocity.cpp  control_velocity_output.cpp  detail_code.txt  fuzzy.cpp  fuzzy_test.cpp  interfaces.cpp  main_control.cpp  plotforce2.py  read_data.cpp  tesing_fuzzy.cpp  velocity_interfaces.cpp
zeabus_control/src/old_version/: control_fuzzy.cpp
zeabus_control/test/: fuzzy_3_dimension.cpp
zeabus_filter/: CMakeLists.txt  package.xml
zeabus_filter/src/: trimed_dvl.cpp  trimed_imu.cpp  trimed_pressure.cpp
zeabus_fusion/: CMakeLists.txt  package.xml
zeabus_fusion/src/: function_helper.cpp  raw_fusion.cpp
zeabus_hardware/: CMakeLists.txt  package.xml
zeabus_hardware/src/: maestro_pololu_node.cpp
zeabus_library_cpp/: CMakeLists.txt  package.xml
zeabus_library_cpp/dynamic_src/zeabus/: count.cpp  print_array.cpp  swap.cpp  template_print_array.cpp  utilize_vector.cpp
zeabus_library_cpp/dynamic_src/zeabus/array/: template_copy.cpp  template_print.cpp  template_swap.cpp
zeabus_library_cpp/dynamic_src/zeabus/client/: base_class.cpp
zeabus_library_cpp/dynamic_src/zeabus/convert/: to_string.cpp
zeabus_library_cpp/dynamic_src/zeabus/filter/: cut_off_average.cpp  differential_equation.cpp  differential_equation_interfaces.cpp  differential_equation_pi_2.cpp  trimed_mean.cpp  trimed_mean_two_pi.cpp
zeabus_library_cpp/dynamic_src/zeabus/fuzzy/: control_error.cpp
zeabus_library_cpp/dynamic_src/zeabus/sort/: cpp.cpp  template_bubble.cpp
zeabus_library_cpp/dynamic_src/zeabus/variadic/: utilize_vector.cpp
zeabus_library_cpp/include/zeabus/: count.hpp  escape_code.hpp  print_array.hpp  radian.hpp  swap.hpp  time.hpp
zeabus_library_cpp/include/zeabus/array/: convert.hpp  copy.hpp  handle_array.hpp  print.hpp  swap.hpp
zeabus_library_cpp/include/zeabus/client/: base_class.hpp  fusion_3_thread.hpp
zeabus_library_cpp/include/zeabus/convert/: bytes.hpp  integer.hpp  string.hpp  to_string.hpp
zeabus_library_cpp/include/zeabus/filter/: 1  cut_off_average.hpp  differential_equation.hpp  differential_equation_interfaces.hpp  differential_equation_pi_2.hpp  trimed_mean.hpp  trimed_mean_two_pi.hpp
zeabus_library_cpp/include/zeabus/fuzzy/: :q  control_by_force.hpp  control_by_velocity.hpp  control_error.hpp  control_error_3dimension.hpp  control_fuzzy.hpp  control_velocity.hpp  control_velocity_output.hpp
zeabus_library_cpp/include/zeabus/ros_interfaces/: README.md  single_thread.hpp  time.hpp
zeabus_library_cpp/include/zeabus/serial/: serial_port.hpp  synchronous_port.hpp
zeabus_library_cpp/include/zeabus/service/: base_class.hpp  control_command.hpp  pololu.hpp
zeabus_library_cpp/include/zeabus/sort/: bubble.hpp  cpp.hpp  sort.hpp
zeabus_library_cpp/include/zeabus/subscribe/: base.hpp  mission_planner_switch.h
zeabus_library_cpp/include/zeabus/variadic/: utilize_vector.hpp
zeabus_library_cpp/src/convert/: bytes.cpp
zeabus_library_cpp/src/zeabus/: CMakeLists.txt  count.cpp  escape_code.cpp  print_array.cpp  radian.cpp  time.cpp
zeabus_library_cpp/src/zeabus/array/: CMakeLists.txt  convert.cpp  print.cpp
zeabus_library_cpp/src/zeabus/client/: CMakeLists.txt  fusion_3_thread.cpp
zeabus_library_cpp/src/zeabus/convert/: CMakeLists.txt
zeabus_library_cpp/src/zeabus/fuzzy/: CMakeLists.txt  control_by_force.cpp  control_by_velocity.cpp  control_error_3dimension.cpp  control_fuzzy.cpp  control_velocity.cpp  control_velocity_output.cpp
zeabus_library_cpp/src/zeabus/ros_interfaces/: CMakeLists.txt  single_thread.cpp  time.cpp
zeabus_library_cpp/src/zeabus/serial/: serial_port.cpp  synchronous_port.cpp
zeabus_library_cpp/src/zeabus/service/: CMakeLists.txt  base_class.cpp  base_class.hpp  control_command.cpp  pololu.cpp
zeabus_library_cpp/src/zeabus/sort/: CMakeLists.txt  bubble.cpp
zeabus_library_python/: CMakeLists.txt  package.xml  setup.py
zeabus_library_python/launch/: base_analysis.launch.xml  buoy_analysis.launch  coffin_analysis.launch  drop_analysis_drop.launch  drop_analysis_find.launch  drop_analysis_open.launch  gate_analysis.launch  path_analysis.launch  path_analysis_tracking.launch  stake_analysis_heart.launch  stake_analysis_left.launch  stake_analysis_right.launch  stake_analysis_vampire.launch
zeabus_library_python/src/zeabus/: __init__.py  version.py
zeabus_library_python/src/zeabus/control/: __init__.py  command_interfaces.py  constant.py
zeabus_library_python/src/zeabus/math/: __init__.py  general.py  linear_equation.py  quaternion.py  test_lib.py
zeabus_manager/: CMakeLists.txt  package.xml
zeabus_manager/src/: ;:w  emergency_manager.py  switch_manager.py  toggle_manager.py
zeabus_minimal/: CMakeLists.txt  package.xml
zeabus_minimal/launch/: control_position.launch  control_velocity.launch  filter.launch  hardware_initial.launch  record.launch  sensor.launch  speed.launch  state.launch  straight.launch
zeabus_model/: CMakeLists.txt  package.xml
zeabus_model/launch/: display.launch  draw_model.launch  flag_model.launch  flag_model.launch.xml  gate_model.launch.xml  intergral_rviz.launch  path_model.launch.xml  robot_model.launch  robot_model.launch.xml
zeabus_model/rviz/: open_all.rviz  zeabus_simple.rviz
zeabus_model/urdf/: flag.urdf  gate.urdf  path.urdf  zeabus.urdf  zeabus_robot.urdf
zeabus_sensor/: CMakeLists.txt  package.xml
zeabus_sensor/launch/: imu_4220_65901.launch
zeabus_sensor/src/: dvl_node.cpp  imu_capture_gyro.cpp  imu_node.cpp
(+90 files in other folders)
