<?xml version="1.0"?>
<package format="2">

    <name>zeabus_filter</name>
    <version>0.0.0</version>

    <description>This will package to manage about filter part node</description>

    <author email="supasan.k@ku.th">K.Supasan</author>

    <maintainer email="supasan.k@ku.th">K.Supasan</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>zeabus_library_cpp</build_depend>
    <exec_depend>zeabus_library_cpp</exec_depend>

    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>

    <build_depend>tf</build_depend>
    <exec_depend>tf</exec_depend>

    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <build_depend>zeabus_utility</build_depend>
    <exec_depend>zeabus_utility</exec_depend>

</package>
