<?xml version="1.0"?>
<package format="2">

    <name>zeabus_library_cpp</name>
    <version>0.0.0</version>
    <description>This will collect library of CPP language to use in component part</description>

    <maintainer email="supasan.k@ku.th">Supasan Komonlit</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>Boost</build_depend>
    <exec_depend>Boost</exec_depend>

    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>
</package>
