<?xml version="1.0"?>

<package format="2">

    <name>zeabus_manager</name>
    <version>0.0.0</version>
    <description>This package will use to control Top level for manage any file and anymode</description>

    <maintainer email="supasan.k@ku.th">K.Supasan</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>rospy</build_depend>
    <exec_depend>rospy</exec_depend>

    <build_depend>zeabus_utility</build_depend>
    <exec_depend>zeabus_utility</exec_depend>

    <build_depend>zeabus_library_python</build_depend>
    <exec_depend>zeabus_library_python</exec_depend>

</package>
