<?xml version="1.0"?>
<package format="2">
    <name>zeabus_minimal</name>
    <version>0.0.0</version>
    <description>The zeabus minimal package</description>

    <maintainer email="supasan.k@ku.th">Supasan Komonlit</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <export>

    </export>
</package>
